# trashpin

./: .env  .env.example  .gitignore  README.md  db init.py  example.env  main.py  pyproject.toml  requirements.txt  settings.py
cogs/: archiver.py  utilities.py
databases/: guilds.db
main/: main.py
